# amen-backend

./: .gitignore  manage.py  pyproject.toml
church_backend/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_publication_date.py
core/templates/core/: index.html
parser/: pipelines.py  settings.py
parser/spiders/: pomisna.py
